Refactor: Clean up TypeCommandService by removing unused imports and simplifying fetchAndSaveTypes method Feat: Add @Validated annotation to TypeQueryService for enhanced validation support